# FIA2024.1-BhagaChall

./: Pipfile  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt
src/: constants.py  utils.py
src/game/: board.py  game.py  game_state.py  game_types.py
src/minimax/: heuristics.py  minimax.py  search_tree.py
tests/: test_allowed_movements.py
